tests/testcases/errors/single-error-on-missing-import-namespace.boo
"""
single-error-on-missing-import-namespace.boo(5,1): BCE0043: Unexpected token: <EOL>.
"""
import #unfortunately the error location is a bit misleading
